# open-notebook-cli

./: .env.sample  .gitignore  CHANGELOG.md  README.md  TODO.md  ai_iterative_ask.py  batch_upload.py  docker-compose.yml  iterative_notebook_cli.py  notebook-cli.sh  notebook_cli.py  pyproject.toml  run_notebook_ask.py  test_api.py  upload_to_notebook.sh
src/open_notebook/: cli.py  utils.py
src/open_notebook_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_packaging.py  test_utils.py
